gccida/c0/gen_split_1182
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15202:39: error: use of undeclared identifier 'machine_mode'
operands[4] = ix86_force_to_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[2]), operands[2]); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15202:54: error: expected expression
operands[4] = ix86_force_to_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[2]), operands[2]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15203:39: error: use of undeclared identifier 'machine_mode'
operands[4] = gen_rtx_fmt_e( FLOAT, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operands), operands[4]); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15203:54: error: expected expression
operands[4] = gen_rtx_fmt_e( FLOAT, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operands), operands[4]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15206:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)operands[3], 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15206:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)operands[3], 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15207:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[3]), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15207:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[3]), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15212:26: error: use of undeclared identifier 'machine_mode'
ix86_free_from_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[2])); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/insn-emit.c:15212:41: error: expected expression
ix86_free_from_memory( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)operands[2])); 
                                        ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1182/src/obj/insn-emit.o] Error 1
